tests/functional/lang/eval-fail-genList-2.err.exp
error:
       … while calling the 'genList' builtin
         at /pwd/lang/eval-fail-genList-2.nix:1:1:
            1| builtins.genList 1 2
             | ^
            2|

       … while evaluating the first argument passed to builtins.genList

       error: expected a function but found an integer: 1
